# dev-be-task

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  crud.py  db.py  main.py  models.py  schemas.py
app/config/: database.py
app/controllers/: user_controller.py
app/exceptions/: base.py  handlers.py
app/models/: user_model.py
app/repositories/: base.py  user_repository.py
app/schemas/: user_schema.py
app/services/: user_service.py
app/utils/: response.py
scripts/: run.sh  test.sh
tests/: __init__.py  test_users.py
